[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fixtest"
version = "0.2.0"
readme = "README.md"
authors = [
  { name="Kenn Takara", email="kenn.takara@outlook.com" },
]
description = "FIX (Financial Information eXchange) protocol testing tool"
license = {text = "MIT License"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Networking",
    "Topic :: Software Development :: Testing"
]
dependencies = [
    "twisted >= 22.0.0"
]

[project.scripts]
fixtest="fixtest.base.runner:main"

[project.urls]
"Homepage" = "https://github.com/kennt/fixtest"
"Bug Tracker" = "https://github.com/kennt/fixtest/issues"
